--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
 /*  your css code here. If applicable */
+.selector{
+	color: rgb(0,0,f);
+	background-color: rbg(e,e,e);
+	font-family: Arial;
+	font-size: 20px;
+}
